# ppmzhang2.github.io

./: .buildinfo  .gitignore  Makefile  README.md  application.html  conda-apple-py311.yaml  dataset.html  encoding.html  genindex.html  index.html  model.html  network.html  networks.html  objects.inv  pretrain.html  pyproject.toml  ref.html  reference.html  requirements.txt  review.html  ruff.toml  search.html  searchindex.js  train.html
.doctrees/: environment.pickle  index.doctree  ref.doctree
.doctrees/cv/: index.doctree  reference.doctree
.doctrees/gpt/: encoding.doctree  index.doctree  model.doctree  network.doctree  reference.doctree  review.doctree  train.doctree
.doctrees/math/: index.doctree
.doctrees/mnp/: abundance_by_size.doctree  flux_est.doctree  global_observation.doctree  glomap.doctree  index.doctree  terms.doctree
.doctrees/nerf/: index.doctree  model.doctree  reference.doctree
.doctrees/nlp/: index.doctree
.github/workflows/: pages.yml
_sources/: application.rst.txt  dataset.rst.txt  encoding.rst.txt  index.md.txt  index.rst.txt  model.rst.txt  network.rst.txt  pretrain.rst.txt  ref.md.txt  reference.rst.txt  review.rst.txt  train.rst.txt
_sources/cv/: index.md.txt  reference.rst.txt
_sources/gpt/: encoding.rst.txt  index.rst.txt  model.rst.txt  network.rst.txt  reference.rst.txt  review.rst.txt  train.rst.txt
_sources/math/: index.md.txt
_sources/mnp/: flux_est.md.txt  global_observation.md.txt  glomap.md.txt  terms.md.txt
_sources/nerf/: index.rst.txt  reference.rst.txt
_sources/nlp/: index.md.txt
_static/js/: disqus.js
cv/: index.html  reference.html
cv/nerf/: index.html  model.html  reference.html
cv/od/: def.html  index.html  rcnn_faster_detector.html  rcnn_faster_model.html  rcnn_faster_rpn.html  rcnn_faster_train.html  yolo_loss.html
cv/yolo/: index.html  loss.html  model.html  reference.html
docs/: index.html  objects.inv
docs/.doctrees/: environment.pickle
docs/cv/: index.html
gpt/: encoding.html  index.html  model.html  network.html  reference.html  review.html  train.html
math/: index.html
math/ft/: app_diffraction.html  conv.html  convapp_prob.html  convapp_rodcooling.html  duality.html  examples.html  gft_1.html  gft_2.html  gft_3.html  index.html  operations.html
math/misc/: cov_circ.html  index.html  kkt_landing.html  proof_mulpos.html  svm_kernel.html
math/sl/: appx_a.html  appx_b.html  bayes.html  bayes_ex_1.html  bayes_ex_2.html  bp.html  gd.html  index.html  lda.html  lda_dr.html  lr_formula.html  lr_ols.html  lr_ols_formula.html  lr_ridge.html  lr_snr.html  mgd.html  mse.html  pg.html  proof_mulpos.html  qda.html  svm_kernel.html
mnp/: abundance_by_size.html  flux_est.html  global_observation.html  glomap.html  index.html  terms.html
nerf/: index.html  model.html  reference.html
nlp/: index.html
nlp/gpt/: encoding.html  index.html  model.html  network.html  reference.html  review.html  train.html
source/: conf.py  index.rst  ref.rst  refs.bib
(+193 files in other folders)
