[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ZHANG, Meng", email = "ztz2000@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "Sphinx>=4.5.0",
    "pytest>=7.1.1",
    "pytest-cov>=3.0.0",
    "yapf>=0.32.0",
    "setuptools-git-versioning>=1.9.2",
    "pylint>=2.13.5",
    "ablog>=0.10.23",
    "pydata-sphinx-theme>=0.8.1",
    "sphinx-disqus>=1.2.0",
]
[tool.pdm]
[tool.pdm.dev-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}.post{ccount}+{sha}"
dirty_template = "{tag}.post{ccount}+{sha}.dirty"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov src --cov-report xml:coverage.xml --cov-report term-missing"
testpaths = [
  "tests",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
force_single_line = true
